# Kal..Predict

./: .env.example  .env.template  .gitignore  CLAUDE.md  DEVELOPMENT.md  PROJECT_STRUCTURE.md  pyproject.toml
.github/workflows/: ci.yml
config/: ollama.sh
docs/: README.md
docs/architecture/: adr-0001-system-boundaries.md  adr-0002-ui-readonly-dashboard.md  data-contracts.md
docs/compliance/: audit-logging-standard.md  change-management.md
docs/engineering/: api-spec.md  future-enhancements.md  performance-budgets.md  ui-api-spec.md
docs/governance/: gate-status-register.md  raci.md  sdlc-charter.md  sdlc-execution-order.md
docs/operations/: current-status.md  incident-response.md  kalshi-onboarding-smoke-runbook.md  pre-key-phase2-status.md  runbook-paper-trading.md  v2-domain-onboarding-plan.md
docs/product/: prd-v1.md
docs/quality/: calibration-criteria.md  pre-key-phase2-evidence-pack.md  replay-specification.md  test-strategy.md  ui-test-strategy.md
docs/security/: secrets-policy.md  threat-model.md
scripts/: demo_smoke.py  kalshi_credential_preflight.py  observation_throughput_report.py  prekey_readiness.sh
src/kal_predict/: __init__.py  config.py  logging_setup.py  models.py  trace.py
tests/: conftest.py  test_config.py  test_fixtures.py  test_logging_setup.py  test_models.py  test_trace.py  test_utils_errors.py
tests/adapters/: __init__.py  test_execution_adapters.py  test_market_adapters.py
tests/api/: test_ui_api.py
tests/core/: test_replay.py  (+2 more)
ui/: next.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
(+76 files in other folders)
