[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kal-predict"
version = "0.1.0"
description = "Autonomous predictive trading agent for Kalshi"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Rasalghul", email = "rajrohan.thakur07@gmail.com"}]

dependencies = [
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "httpx>=0.25.0,<1.0",
    "ollama>=0.3.0,<1.0",
    "structlog>=24.1.0,<25.0",
    "python-dotenv>=1.0.0,<2.0",
    "pyyaml>=6.0,<7.0",
    "pytz>=2024.1,<2026.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[tool.setuptools]
packages = ["kal_predict", "kal_predict.adapters", "kal_predict.core", "kal_predict.pipeline", "kal_predict.utils"]
package-dir = {"" = "src"}

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_incomplete_defs = true
